@@ -22,89 +22,89 @@ import java.util.HashMap;
 import java.util.List;
 
 public abstract class AStandGui extends PagedMapGui implements StandGui {
-	private final String managerName;
+    private final String managerName;
 
-	public AStandGui (@NotNull String managerName,@NotNull  Player player,@NotNull  ArmorStand stand,@NotNull Provider provider) {
-		super("&9"+managerName+"Provider " + provider.getId(), 6, player, null, DeepDungeons.get());
-		if (!UtilsString.isValidID(managerName))
-			throw new IllegalStateException();
-		this.stand = stand;
-		this.provider = provider;
-		this.managerName = managerName;
+    public AStandGui(@NotNull String managerName, @NotNull Player player, @NotNull ArmorStand stand, @NotNull Provider provider) {
+        super("&9" + managerName + "Provider " + provider.getId(), 6, player, null, DeepDungeons.get());
+        if (!UtilsString.isValidID(managerName))
+            throw new IllegalStateException();
+        this.stand = stand;
+        this.provider = provider;
+        this.managerName = managerName;
 
-		this.setButton(44,
-				new FButton(this, () -> new ItemBuilder(Material.BARRIER)
-						.setDescription(this.getLanguageSection(getTargetPlayer()).loadStringList(
-								"provider.delete.info", List.of("&6&lClick to delete this provider")))// TODO
-																													// better
-																													// text
-						.build(), (event) -> {
-							stand.remove();
-							new ArrayList<>(this.getInventory().getViewers()).forEach(HumanEntity::closeInventory);
-							return false;
-						}));
-		registerParams();
-		ItemStack item = stand.getEquipment().getItemInMainHand();
-		loadValues(item.hasItemMeta() ? item.getItemMeta().getLore() : Collections.emptyList());
-	}
+        this.setButton(44,
+                new FButton(this, () -> new ItemBuilder(Material.BARRIER)
+                        .setDescription(this.getLanguageSection(getTargetPlayer()).loadStringList(
+                                "provider.delete.info", List.of("&6&lClick to delete this provider")))// TODO
+                        // better
+                        // text
+                        .build(), (event) -> {
+                    stand.remove();
+                    new ArrayList<>(this.getInventory().getViewers()).forEach(HumanEntity::closeInventory);
+                    return false;
+                }));
+        registerParams();
+        ItemStack item = stand.getEquipment().getItemInMainHand();
+        loadValues(item.hasItemMeta() ? item.getItemMeta().getLore() : Collections.emptyList());
+    }
 
-	private final ArmorStand stand;
-	private final Provider provider;
-	
-	public abstract void registerParams();
-	
-	public Provider getProvider() {
-		return provider;
-	}
-	
+    private final ArmorStand stand;
+    private final Provider provider;
 
-	public <T> void registerParam(Parameter<T> param, int slot){
-		this.setValue(param);
-		this.setButton(slot, param.getEditorButton(this));
-	}
+    public abstract void registerParams();
 
-	@SuppressWarnings("rawtypes")
-	private final HashMap<Parameter, Object> params = new HashMap<>();
+    public Provider getProvider() {
+        return provider;
+    }
 
-	@SuppressWarnings("unchecked")
-	public <T> T getValue(Parameter<T> param) {
-		return (T) params.get(param);
-	}
 
-	public <T> void setValue(Parameter<T> param) {
-		this.setValue(param, param.defaultValue);
-	}
+    public <T> void registerParam(Parameter<T> param, int slot) {
+        this.setValue(param);
+        this.setButton(slot, param.getEditorButton(this));
+    }
 
-	public <T> void setValue(Parameter<T> param, T value) {
-		params.put(param, value);
-	}
-	
-	@SuppressWarnings("unchecked")
-	public void loadValues(List<String> info) {
-		params.keySet().forEach((k)->params.put(k, k.readValue(info)));
-	}
+    @SuppressWarnings("rawtypes")
+    private final HashMap<Parameter, Object> params = new HashMap<>();
 
-	public ArmorStand getStand() {
-		return stand;
-	}
+    @SuppressWarnings("unchecked")
+    public <T> T getValue(Parameter<T> param) {
+        return (T) params.get(param);
+    }
 
-	@Override
-	public void onClose(InventoryCloseEvent event) {
-		if (!stand.isValid())
-			return;
-		stand.setSmall(true);
-		stand.getEquipment().setItem(EquipmentSlot.HAND,
-				new ItemBuilder(Material.PAPER).setDisplayName(managerName+" " + provider.getId()).setLore(fillInfo()).build(),
-				true);
-		stand.setCustomName(ChatColor.GRAY+managerName);
-		stand.setCustomNameVisible(true);
-	}
+    public <T> void setValue(Parameter<T> param) {
+        this.setValue(param, param.defaultValue);
+    }
 
-	@SuppressWarnings("unchecked")
-	@Override
-	public List<String> fillInfo() {
-		List<String> info = new ArrayList<>();
-		params.forEach((k, v) -> k.addValue(info, v));
-		return info;
-	}
+    public <T> void setValue(Parameter<T> param, T value) {
+        params.put(param, value);
+    }
+
+    @SuppressWarnings("unchecked")
+    public void loadValues(List<String> info) {
+        params.keySet().forEach((k) -> params.put(k, k.readValue(info)));
+    }
+
+    public ArmorStand getStand() {
+        return stand;
+    }
+
+    @Override
+    public void onClose(InventoryCloseEvent event) {
+        if (!stand.isValid())
+            return;
+        stand.setSmall(true);
+        stand.getEquipment().setItem(EquipmentSlot.HAND,
+                new ItemBuilder(Material.PAPER).setDisplayName(managerName + " " + provider.getId()).setLore(fillInfo()).build(),
+                true);
+        stand.setCustomName(ChatColor.GRAY + managerName);
+        stand.setCustomNameVisible(true);
+    }
+
+    @SuppressWarnings("unchecked")
+    @Override
+    public List<String> fillInfo() {
+        List<String> info = new ArrayList<>();
+        params.forEach((k, v) -> k.addValue(info, v));
+        return info;
+    }
 }
